<resources>
    <string name="app_name">netflixNchill</string>

    <!-- Random Image URL -->
    <string name="randomImage">https://www.picsum.photos/200</string>

    <!-- Menu Items -->
    <string name="movies">Movies</string>
    <string name="home">Home</string>
    <string name="series">Series</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>

    <!-- Login / Sign Up -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="local_user">Local User</string>

    <string name="or">OR</string>
    <string name="and">AND</string>

</resources>
